tests/jballerina-unit-test/src/test/resources/test-src/javainterop/negative/method_sig_not_match15.bal
import ballerina/jballerina.java;

public function acceptIntErrorUnionReturnWhichThrowsCheckedException(int flag) returns int = @java:Method {
    'class:"org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"
} external;
